crates/parser/tests/snapshots/statements/valid/0057@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
assertion_line: 62
description: TRUNCATE users;
---
Parse {
    cst: SourceFile@0..15
      TruncateStmt@0..15
        Truncate@0..8 "TRUNCATE"
        Whitespace@8..9 " "
        RangeVar@9..14
          Ident@9..14 "users"
        Ascii59@14..15 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: TruncateStmt(
                TruncateStmt {
                    relations: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "users",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 9,
                                    },
                                ),
                            ),
                        },
                    ],
                    restart_seqs: false,
                    behavior: DropRestrict,
                },
            ),
            range: 0..14,
        },
    ],
}
