crates/parser/tests/snapshots/statements/valid/lseg@9.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "-- horizontal\nINSERT INTO LSEG_TBL VALUES ('[(NaN,1),(NaN,90)]');"
---
Parse {
    cst: SourceFile@0..65
      SqlComment@0..13 "-- horizontal"
      Newline@13..14 "\n"
      InsertStmt@14..65
        Insert@14..20 "INSERT"
        Whitespace@20..21 " "
        Into@21..25 "INTO"
        Whitespace@25..26 " "
        RangeVar@26..34
          Ident@26..34 "LSEG_TBL"
        Whitespace@34..35 " "
        SelectStmt@35..63
          Values@35..41 "VALUES"
          Whitespace@41..42 " "
          Ascii40@42..43 "("
          List@43..63
            AConst@43..63
              Sconst@43..63 "'[(NaN,1),(NaN,90)]'"
        Ascii41@63..64 ")"
        Ascii59@64..65 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: InsertStmt(
                InsertStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "lseg_tbl",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 12,
                        },
                    ),
                    cols: [],
                    select_stmt: Some(
                        Node {
                            node: Some(
                                SelectStmt(
                                    SelectStmt {
                                        distinct_clause: [],
                                        into_clause: None,
                                        target_list: [],
                                        from_clause: [],
                                        where_clause: None,
                                        group_clause: [],
                                        group_distinct: false,
                                        having_clause: None,
                                        window_clause: [],
                                        values_lists: [
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        AConst(
                                                                            AConst {
                                                                                isnull: false,
                                                                                location: 29,
                                                                                val: Some(
                                                                                    Sval(
                                                                                        String {
                                                                                            sval: "[(NaN,1),(NaN,90)]",
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        sort_clause: [],
                                        limit_offset: None,
                                        limit_count: None,
                                        limit_option: Default,
                                        locking_clause: [],
                                        with_clause: None,
                                        op: SetopNone,
                                        all: false,
                                        larg: None,
                                        rarg: None,
                                    },
                                ),
                            ),
                        },
                    ),
                    on_conflict_clause: None,
                    returning_list: [],
                    with_clause: None,
                    r#override: OverridingNotSet,
                },
            ),
            range: 13..64,
        },
    ],
}
